--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -243,7 +243,7 @@
 
                             <div class="pricing-block">
                                 <div class="pb-block">
-                                    <h3>Beginer</h3>
+                                    <h3>Beginner</h3>
                                     <p>Proin luctus nulla fringilla massa euismod commodo. Donec sit amet elementum libero.</p>
                                 </div>
                                 <div class="pb-price">
