--- a/views/login_employee.handlebars
+++ b/views/login_employee.handlebars
@@ -21,16 +21,16 @@
             <div class="login-box animated fadeInDown">
                 <div class="login-logo"></div>
                 <div class="login-body">
-                    <div class="login-title"><strong>Employee Login</strong></div>
-                    <form action="index.html" class="form-horizontal" method="post">
+                    <div class="login-title"><strong>{{subdomain}} - Employee Login</strong></div>
+                    <form class="form-horizontal" method="post">
                     <div class="form-group">
                         <div class="col-md-12">
-                            <input type="text" class="form-control" placeholder="Username"/>
+                            <input type="email" name="email" class="form-control" placeholder="Username"/>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-md-12">
-                            <input type="password" class="form-control" placeholder="Password"/>
+                            <input type="password" name="password" class="form-control" placeholder="Password"/>
                         </div>
                     </div>
                     <div class="form-group">
@@ -45,7 +45,7 @@
                 </div>
                 <div class="login-footer">
                     <div class="pull-left">
-                        &copy; 2014 AppName
+                        &copy; 2016 Receptional
                     </div>
                     <div class="pull-right">
                         <a href="#">About</a> |
