--- a/views/dashboard_admin.handlebars
+++ b/views/dashboard_admin.handlebars
@@ -42,13 +42,13 @@
                     </li>
                     <li class="xn-title">Navigation</li>
                     <li class="active">
-                        <a href="employee"><span class="fa fa-desktop"></span> <span class="xn-text">Overview</span></a>                     
+                        <a href="#"><span class="fa fa-desktop"></span> <span class="xn-text">Overview</span></a>
                     </li>                    
                     <li class="active">
                         <a href="index"><span class="fa fa-desktop"></span> <span class="xn-text">Patient Queue</span></a>                        
                     </li>
                     <li class="active">
-                        <a href="index"><span class="fa fa-desktop"></span> <span class="xn-text">Employees</span></a>
+                        <a href="add_employees"><span class="fa fa-desktop"></span> <span class="xn-text">Employees</span></a>
                     </li>    
                     <li class="active">
                         <a href="index"><span class="fa fa-desktop"></span> <span class="xn-text">Edit Form</span></a>                        
@@ -83,7 +83,7 @@
                     <!-- END SEARCH -->
                     <!-- SIGN OUT -->
                     <li class="xn-icon-button pull-right">
-                        <a href="#" class="mb-control" data-box="#mb-signout"><span class="fa fa-sign-out"></span></a>                        
+                        <a href="/logout" class="mb-control" data-box="#mb-signout"><span class="fa fa-sign-out"></span></a>
                     </li> 
                     <!-- END SIGN OUT -->
                     <!-- MESSAGES -->
