--- a/views/dashboard_employee.handlebars
+++ b/views/dashboard_employee.handlebars
@@ -42,10 +42,10 @@
                     </li>
                     <li class="xn-title">Navigation</li>
                     <li class="active">
-                        <a href="employee"><span class="fa fa-desktop"></span> <span class="xn-text">Dashboard</span></a>                     
+                        <a href="#"><span class="fa fa-desktop"></span> <span class="xn-text">Dashboard</span></a>
                     </li>                    
                     <li class="active">
-                        <a href="index"><span class="fa fa-desktop"></span> <span class="xn-text">Patient Queue</span></a>                        
+                        <a href="patient_queue"><span class="fa fa-desktop"></span> <span class="xn-text">Patient Queue</span></a>
                     </li>
                     <li class="active">
                         <a href="index"><span class="fa fa-desktop"></span> <span class="xn-text">[Slack]</span></a>                        
@@ -77,7 +77,7 @@
                     <!-- END SEARCH -->
                     <!-- SIGN OUT -->
                     <li class="xn-icon-button pull-right">
-                        <a href="#" class="mb-control" data-box="#mb-signout"><span class="fa fa-sign-out"></span></a>                        
+                        <a href="/logout" class="mb-control" data-box="#mb-signout"><span class="fa fa-sign-out"></span></a>
                     </li> 
                     <!-- END SIGN OUT -->
                     <!-- MESSAGES -->
