Conformed Reset and Forgot password

--- a/views/account/forgot.handlebars
+++ b/views/account/forgot.handlebars
@@ -1,4 +1,4 @@
-<div class="col-sm-8 col-sm-offset-2">
+<!-- <div class="col-sm-8 col-sm-offset-2">
   <form method="POST">
     <legend>Forgot Password</legend>
     <input type="hidden" name="_csrf"/>
@@ -11,4 +11,65 @@
       <button type="submit" class="btn btn-primary"><i class="fa fa-key"></i>Reset Password</button>
     </div>
   </form>
+</div>-->
+
+
+<!DOCTYPE html>
+<html lang="en" class="body-full-height">
+<head>
+    <!-- META SECTION -->
+    <title>Forgot Password</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <!-- END META SECTION -->
+
+    <!-- CSS INCLUDE -->
+    <link rel="stylesheet" type="text/css" id="theme" href="css/theme-default.css"/>
+    <!-- EOF CSS INCLUDE -->
+</head>
+<body>
+
+<div class="login-container">
+
+    <div class="login-box animated fadeInDown">
+        <div class="login-logo"></div>
+        <div class="login-body">
+            <div class="login-title"><strong>Forgot Password?</strong></div>
+            <form class="form-horizontal" method="POST">
+                <div class="form-group">
+                    <div class="col-md-12">
+                        <input type="email" name="email" id="email" class="form-control" placeholder="E-mail"/>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-lg-6 col-lg-offset-3">
+                        <button class="btn btn-primary btn-block">Reset Password</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="login-footer">
+            <div class="pull-left">
+                &copy; 2016 Receptional
+            </div>
+            <div class="pull-right">
+                <a href="/about">About</a> |
+                <a href="#">Privacy</a> |
+                <a href="/contact">Contact Us</a>
+            </div>
+        </div>
+    </div>
+
 </div>
+
+</body>
+</html>
+
+
+
+
+
+
