Added new fields to user schema

--- a/views/account/signup.handlebars
+++ b/views/account/signup.handlebars
@@ -51,7 +51,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-12">
-                            <input type="url" name="subdomainurl" id="subdomainurl" class="form-control" placeholder="Subdomain URL"/>
+                            <input type="text" name="subdomainurl" id="subdomainurl" class="form-control" placeholder="Subdomain URL"/>
                         </div>
                     </div>
                     <div class="form-group">
