Updated Jeremy's Add Employees. And added export Employee list to different files.
Other random clean up/refining

--- a/views/account/login.handlebars
+++ b/views/account/login.handlebars
@@ -2,7 +2,7 @@
 <html lang="en" class="body-full-height">
     <head>        
         <!-- META SECTION -->
-        <title>Admin Login</title>            
+        <title>Login</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -43,7 +43,7 @@
                     </div>
                     <div class="login-or">OR</div>
                     <div class="form-group">
-                    <div class="col-sm-offset-3 col-sm-7">
+                    <div class="col-lg-6 col-lg-offset-3">
                       <a href="/auth/facebook" class="btn btn-block btn-facebook btn-social">
                         <i class="fa fa-facebook">
                         </i>Sign in with Facebook</a>
