--- a/views/account/signup.handlebars
+++ b/views/account/signup.handlebars
@@ -56,14 +56,17 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-6">
-                            <button type="submit" class="btn btn-info btn-block">Sign Up</button>
+                            <button type="reset" class="btn btn-primary btn-block">Clear</button>
+                        </div>
+                        <div class="col-md-6">
+                            <button type="submit" class="btn btn-success btn-block">Sign Up</button>
                         </div>
                     </div>
                     </form>
                 </div>
                 <div class="login-footer">
                     <div class="pull-left">
-                        &copy; 2014 AppName
+                        &copy; 2016 Receptional
                     </div>
                     <div class="pull-right">
                         <a href="/about">About</a> |
