--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -57,8 +57,12 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="/about">About Us</a></li>
                     <li><a href="/contact">Contact Us</a></li>
-                    <li><a href="/signup">Sign Up</a></li>
-                    <li><a href="/login">Login</a></li>
+                    {{#if user}}
+                        <li><a href="/logout">Log Out</a></li>
+                    {{else}}
+                        <li><a href="/signup">Sign Up</a></li>
+                        <li><a href="/login">Login As Owner</a></li>
+                    {{/if}}
                 </ul>
                 <!-- ./navigation -->
 
