basic save and display forms

--- a/views/dashboard_employee.handlebars
+++ b/views/dashboard_employee.handlebars
@@ -35,23 +35,23 @@
                                 <img src="assets/images/users/avatar.jpg" alt="John Doe"/>
                             </div>
                             <div class="profile-data">
-                                <div class="profile-data-name">[name]</div>
+                                <div class="profile-data-name">{{user.name}}</div>
                                 <div class="profile-data-title">Employee</div>
                             </div>
                         </div>                                                                        
                     </li>
                     <li class="xn-title">Navigation</li>
                     <li class="active">
-                        <a href="#"><span class="fa fa-desktop"></span> <span class="xn-text">Dashboard</span></a>
+                        <a href="/"><span class="fa fa-dashboard"></span> <span class="xn-text">Dashboard</span></a>
                     </li>                    
                     <li class="active">
-                        <a href="patient_queue"><span class="fa fa-desktop"></span> <span class="xn-text">Patient Queue</span></a>
+                        <a href="patient_queue"><span class="fa fa-clock-o"></span> <span class="xn-text">Patient Queue</span></a>
                     </li>
                     <li class="active">
-                        <a href="index"><span class="fa fa-desktop"></span> <span class="xn-text">[Slack]</span></a>                        
+                        <a href="#"><span class="fa fa-comments-o"></span> <span class="xn-text">[Slack]</span></a>
                     </li>       
                     <li class="active">
-                        <a href="index"><span class="fa fa-desktop"></span> <span class="xn-text">Settings</span></a>                        
+                        <a href="settings"><span class="fa fa-cogs"></span> <span class="xn-text">Settings</span></a>
                     </li>  
                 </ul>
                 <!-- END X-NAVIGATION -->
