--- a/views/add_employees.handlebars
+++ b/views/add_employees.handlebars
@@ -79,7 +79,6 @@
 <div class="page-container">
 
 
-
     <!-- START PAGE SIDEBAR -->
     <div class="page-sidebar">
         <!-- START X-NAVIGATION -->
@@ -97,29 +96,29 @@
                         <img src="assets/images/users/avatar.jpg" alt="John Doe"/>
                     </div>
                     <div class="profile-data">
-                        <div class="profile-data-name">[name]</div>
+                        <div class="profile-data-name">{{user.companyname}}</div>
                         <div class="profile-data-title">Owner</div>
                     </div>
                 </div>
             </li>
             <li class="xn-title">Navigation</li>
             <li class="active">
-                <a href="employee"><span class="fa fa-desktop"></span> <span class="xn-text">Overview</span></a>
+                <a href="/"><span class="fa fa-dashboard"></span> <span class="xn-text">Overview</span></a>
             </li>
             <li class="active">
-                <a href="index"><span class="fa fa-desktop"></span> <span class="xn-text">Patient Queue</span></a>
+                <a href="patient_queue"><span class="fa fa-clock-o"></span> <span class="xn-text">Patient Queue</span></a>
             </li>
             <li class="active">
-                <a href="add_employees"><span class="fa fa-desktop"></span> <span class="xn-text">Employees</span></a>
+                <a href="add_employees"><span class="fa fa-users"></span> <span class="xn-text">Employees</span></a>
             </li>
             <li class="active">
-                <a href="index"><span class="fa fa-desktop"></span> <span class="xn-text">Edit Form</span></a>
+                <a href="form"><span class="fa fa-pencil"></span> <span class="xn-text">Edit Form</span></a>
             </li>
             <li class="active">
-                <a href="index"><span class="fa fa-desktop"></span> <span class="xn-text">[Slack]</span></a>
+                <a href="#"><span class="fa fa-comments-o"></span> <span class="xn-text">[Slack]</span></a>
             </li>
             <li class="active">
-                <a href="index"><span class="fa fa-desktop"></span> <span class="xn-text">Settings</span></a>
+                <a href="settings"><span class="fa fa-cogs"></span> <span class="xn-text">Settings</span></a>
             </li>
         </ul>
         <!-- END X-NAVIGATION -->
@@ -127,107 +126,182 @@
     <!-- END PAGE SIDEBAR -->
 
     <div class="page-content">
+        <!-- START X-NAVIGATION VERTICAL -->
+        <ul class="x-navigation x-navigation-horizontal x-navigation-panel">
+            <!-- TOGGLE NAVIGATION -->
+            <li class="xn-icon-button">
+                <a href="#" class="x-navigation-minimize"><span class="fa fa-dedent"></span></a>
+            </li>
+            <!-- END TOGGLE NAVIGATION -->
+            <!-- SEARCH -->
+            <li class="xn-search">
+                <form role="form">
+                    <input type="text" name="search" placeholder="Search..."/>
+                </form>
+            </li>
+            <!-- END SEARCH -->
+            <!-- SIGN OUT -->
+            <li class="xn-icon-button pull-right">
+                <a href="/logout" class="mb-control" data-box="#mb-signout"><span class="fa fa-sign-out"></span></a>
+            </li>
+            <!-- END SIGN OUT -->
+            <!-- MESSAGES -->
+            <li class="xn-icon-button pull-right">
+                <a href="#"><span class="fa fa-comments"></span></a>
+                <div class="informer informer-danger">4</div>
+                <div class="panel panel-primary animated zoomIn xn-drop-left xn-panel-dragging">
+                    <div class="panel-heading">
+                        <h3 class="panel-title"><span class="fa fa-comments"></span> Messages</h3>
+                        <div class="pull-right">
+                            <span class="label label-danger">4 new</span>
+                        </div>
+                    </div>
+                    <div class="panel-body list-group list-group-contacts scroll" style="height: 200px;">
+                        <a href="#" class="list-group-item">
+                            <div class="list-group-status status-online"></div>
+                            <img src="assets/images/users/user2.jpg" class="pull-left" alt="John Doe"/>
+                            <span class="contacts-title">John Doe</span>
+                            <p>Praesent placerat tellus id augue condimentum</p>
+                        </a>
+                        <a href="#" class="list-group-item">
+                            <div class="list-group-status status-away"></div>
+                            <img src="assets/images/users/user.jpg" class="pull-left" alt="Dmitry Ivaniuk"/>
+                            <span class="contacts-title">Dmitry Ivaniuk</span>
+                            <p>Donec risus sapien, sagittis et magna quis</p>
+                        </a>
+                        <a href="#" class="list-group-item">
+                            <div class="list-group-status status-away"></div>
+                            <img src="assets/images/users/user3.jpg" class="pull-left" alt="Nadia Ali"/>
+                            <span class="contacts-title">Nadia Ali</span>
+                            <p>Mauris vel eros ut nunc rhoncus cursus sed</p>
+                        </a>
+                        <a href="#" class="list-group-item">
+                            <div class="list-group-status status-offline"></div>
+                            <img src="assets/images/users/user6.jpg" class="pull-left" alt="Darth Vader"/>
+                            <span class="contacts-title">Darth Vader</span>
+                            <p>I want my money back!</p>
+                        </a>
+                    </div>
+                    <div class="panel-footer text-center">
+                        <a href="pages-messages.html">Show all messages</a>
+                    </div>
+                </div>
+            </li>
+            <!-- END MESSAGES -->
+        </ul>
+        <!-- END X-NAVIGATION VERTICAL -->
 
-        <div id="section1" class="section">
-            <div id="s1container">
-                <div class="container-fluid">
-                    <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#addEmployee">
-                        Add Employee
-                    </button>
+        <!-- START BREADCRUMB -->
+        <ul class="breadcrumb">
+            <li><a href="/">Home</a></li>
+            <li class="active">Employees</li>
+        </ul>
+        <!-- END BREADCRUMB -->
 
-                    <br><br>
-                    <table class="table table-striped sortable" id="employees">
-                        <thead>
-                        <tr>
-                            <th style="width: 25%" id="nameHead">
-                                Name
-                            </th>
-                            <th style="width: 25%" id="numberHead">
-                                Number
-                            </th>
-                            <th style="width: 50%" id="emailHead">
-                                Email
-                            </th>
-                        </tr>
-                        </thead>
-                        {{#employees}}
+        <!-- PAGE CONTENT WRAPPER -->
+        <div class="page-content-wrap">
+
+            <div id="section1" class="section">
+                <div id="s1container">
+                    <div class="container-fluid">
+                        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#addEmployee">
+                            Add Employee
+                        </button>
+
+                        <br><br>
+                        <table class="table table-striped sortable" id="employees">
+                            <thead>
                             <tr>
-                                <td>{{name}}</td>
-                                <td>{{phone_number}}</td>
-                                <td>{{email}}</td>
+                                <th style="width: 25%" id="nameHead">
+                                    Name
+                                </th>
+                                <th style="width: 25%" id="numberHead">
+                                    Number
+                                </th>
+                                <th style="width: 50%" id="emailHead">
+                                    Email
+                                </th>
                             </tr>
-                        {{/employees}}
-                        <tbody>
-                        </tbody>
-                    </table>
+                            </thead>
+                            {{#employees}}
+                                <tr>
+                                    <td>{{name}}</td>
+                                    <td>{{phone_number}}</td>
+                                    <td>{{email}}</td>
+                                </tr>
+                            {{/employees}}
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <script type="text/javascript">
-            $(function () {
-                $('input[name=name]').on('input', function () {
-                    if ($('#modalName').val() && $('#modalNumber').val() && $('#modalEmail').val() && $('#modalPassword').val() && $('#modalConfirm').val())
-                        $('#okbutton').prop('disabled', false);
-                    else
-                        $('#okbutton').prop('disabled', true);
+            <script type="text/javascript">
+                $(function () {
+                    $('input[name=name]').on('input', function () {
+                        if ($('#modalName').val() && $('#modalNumber').val() && $('#modalEmail').val() && $('#modalPassword').val() && $('#modalConfirm').val())
+                            $('#okbutton').prop('disabled', false);
+                        else
+                            $('#okbutton').prop('disabled', true);
+                    });
+                    $('input[name=number]').on('input', function () {
+                        if ($('#modalName').val() && $('#modalNumber').val() && $('#modalEmail').val() && $('#modalPassword').val() && $('#modalConfirm').val())
+                            $('#okbutton').prop('disabled', false);
+                        else
+                            $('#okbutton').prop('disabled', true);
+                    });
+                    $('input[name=email]').on('input', function () {
+                        if ($('#modalName').val() && $('#modalNumber').val() && $('#modalEmail').val() && $('#modalPassword').val() && $('#modalConfirm').val())
+                            $('#okbutton').prop('disabled', false);
+                        else
+                            $('#okbutton').prop('disabled', true);
+                    });
+                    $('input[name=password]').on('input', function () {
+                        if ($('#modalName').val() && $('#modalNumber').val() && $('#modalEmail').val() && $('#modalPassword').val() && $('#modalConfirm').val())
+                            $('#okbutton').prop('disabled', false);
+                        else
+                            $('#okbutton').prop('disabled', true);
+                    });
+                    $('input[name=confirm]').on('input', function () {
+                        if ($('#modalName').val() && $('#modalNumber').val() && $('#modalEmail').val() && $('#modalPassword').val() && $('#modalConfirm').val())
+                            $('#okbutton').prop('disabled', false);
+                        else
+                            $('#okbutton').prop('disabled', true);
+                    });
+                    /*var pathname = window.location.href;
+                    var indexOfName = pathname.indexOf('name=');
+                    var indexOfNumber = pathname.indexOf('number=');
+                    var indexOfEmail = pathname.indexOf('email=');
+                    if(indexOfName != -1 && indexOfNumber != -1 && indexOfEmail != -1)
+                    {
+                        var name = pathname.substring(indexOfName+5, indexOfNumber-1);
+                        var number = pathname.substring(indexOfNumber+7, indexOfEmail-1);
+                        var email = pathname.substring(indexOfEmail+6);
+                        $('#employees').find('tbody').append('<tr><th style="width: 25%">' + name + '</th><th style="width: 25%">'  + number + '</th><th style="width: 50%">' + email + '</th></tr>');
+                    }*/
+                    var rownumber = 0;
+                    $('#okbutton').click(function () {
+                        $('#employees').find('tbody').append('<tr id ="row' + rownumber + '"><td style="width: 25%">' + $('#modalName').val() + '</td><td style="width: 25%">' + $('#modalNumber').val() + '</td><td style="width: 40%">' + $('#modalEmail').val() + '</td><td style="width:10%;text-align:right"><a href = "#"><span class = "glyphicon glyphicon-pencil" id = "edit' + rownumber + '"></span></a><a href = "#" class = "delete"><span class = "glyphicon glyphicon-trash" id = "delete' + rownumber + '"></span></a><a href = "#"></a></td></tr>');
+                        rownumber++;
+                        $.bootstrapSortable(true);
+                        $("#addEmployeeForm")[0].reset();
+                    });
+                    $('#cancelbutton').click(function () {
+                        $("#addEmployeeForm")[0].reset();
+                    });
+                /*$('.delete').click(function(){
+                    console.log("hi");
                 });
-                $('input[name=number]').on('input', function () {
-                    if ($('#modalName').val() && $('#modalNumber').val() && $('#modalEmail').val() && $('#modalPassword').val() && $('#modalConfirm').val())
-                        $('#okbutton').prop('disabled', false);
-                    else
-                        $('#okbutton').prop('disabled', true);
-                });
-                $('input[name=email]').on('input', function () {
-                    if ($('#modalName').val() && $('#modalNumber').val() && $('#modalEmail').val() && $('#modalPassword').val() && $('#modalConfirm').val())
-                        $('#okbutton').prop('disabled', false);
-                    else
-                        $('#okbutton').prop('disabled', true);
-                });
-                $('input[name=password]').on('input', function () {
-                    if ($('#modalName').val() && $('#modalNumber').val() && $('#modalEmail').val() && $('#modalPassword').val() && $('#modalConfirm').val())
-                        $('#okbutton').prop('disabled', false);
-                    else
-                        $('#okbutton').prop('disabled', true);
-                });
-                $('input[name=confirm]').on('input', function () {
-                    if ($('#modalName').val() && $('#modalNumber').val() && $('#modalEmail').val() && $('#modalPassword').val() && $('#modalConfirm').val())
-                        $('#okbutton').prop('disabled', false);
-                    else
-                        $('#okbutton').prop('disabled', true);
-                });
-                /*var pathname = window.location.href;
-                var indexOfName = pathname.indexOf('name=');
-                var indexOfNumber = pathname.indexOf('number=');
-                var indexOfEmail = pathname.indexOf('email=');
-                if(indexOfName != -1 && indexOfNumber != -1 && indexOfEmail != -1)
-                {
-                    var name = pathname.substring(indexOfName+5, indexOfNumber-1);
-                    var number = pathname.substring(indexOfNumber+7, indexOfEmail-1);
-                    var email = pathname.substring(indexOfEmail+6);
-                    $('#employees').find('tbody').append('<tr><th style="width: 25%">' + name + '</th><th style="width: 25%">'  + number + '</th><th style="width: 50%">' + email + '</th></tr>');
-                }*/
-                var rownumber = 0;
-                $('#okbutton').click(function () {
-                    $('#employees').find('tbody').append('<tr id ="row' + rownumber + '"><td style="width: 25%">' + $('#modalName').val() + '</td><td style="width: 25%">' + $('#modalNumber').val() + '</td><td style="width: 40%">' + $('#modalEmail').val() + '</td><td style="width:10%;text-align:right"><a href = "#"><span class = "glyphicon glyphicon-pencil" id = "edit' + rownumber + '"></span></a><a href = "#" class = "delete"><span class = "glyphicon glyphicon-trash" id = "delete' + rownumber + '"></span></a><a href = "#"></a></td></tr>');
-                    rownumber++;
-                    $.bootstrapSortable(true);
-                    $("#addEmployeeForm")[0].reset();
-                });
-                $('#cancelbutton').click(function () {
-                    $("#addEmployeeForm")[0].reset();
-                });
-            /*$('.delete').click(function(){
-                console.log("hi");
-            });
-            $('tr').mouseover(
-                function() {
-                    alert('hi');
-                }, function() {
-                }
-            );
-        }	);*/
-        </script>
+                $('tr').mouseover(
+                    function() {
+                        alert('hi');
+                    }, function() {
+                    }
+                );
+            }	);*/
+            </script>
+        </div>
     </div>
 </div>
 
