--- a/views/dashboard_admin.handlebars
+++ b/views/dashboard_admin.handlebars
@@ -35,26 +35,29 @@
                                 <img src="assets/images/users/avatar.jpg" alt="John Doe"/>
                             </div>
                             <div class="profile-data">
-                                <div class="profile-data-name">[name]</div>
+                                <div class="profile-data-name">{{user.companyname}}</div>
                                 <div class="profile-data-title">Owner</div>
                             </div>
                         </div>                                                                        
                     </li>
                     <li class="xn-title">Navigation</li>
                     <li class="active">
-                        <a href="#"><span class="fa fa-dashboard"></span> <span class="xn-text">Overview</span></a>
+                        <a href="/"><span class="fa fa-dashboard"></span> <span class="xn-text">Overview</span></a>
                     </li>                    
                     <li class="active">
-                        <a href="index"><span class="fa fa-clock-o"></span> <span class="xn-text">Patient Queue</span></a>
+                        <a href="patient_queue"><span class="fa fa-clock-o"></span> <span class="xn-text">Patient Queue</span></a>
                     </li>
                     <li class="active">
                         <a href="add_employees"><span class="fa fa-users"></span> <span class="xn-text">Employees</span></a>
                     </li>
                     <li class="active">
-                        <a href="index"><span class="fa fa-pencil"></span> <span class="xn-text">Edit Form</span></a>
-                    </li>    
+                        <a href="form"><span class="fa fa-pencil"></span> <span class="xn-text">Edit Form</span></a>
+                    </li>
                     <li class="active">
-                        <a href="index"><span class="fa fa-comments-o"></span> <span class="xn-text">[Slack]</span></a>
+                        <a href="viewform"><span class="fa fa-pencil"></span> <span class="xn-text">View Form</span></a>
+                    </li>
+                    <li class="active">
+                        <a href="#"><span class="fa fa-comments-o"></span> <span class="xn-text">[Slack]</span></a>
                     </li>       
                     <li class="active">
                         <a href="settings"><span class="fa fa-cogs"></span> <span class="xn-text">Settings</span></a>
