--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -1,13 +1,17 @@
 <html>
 	<head>
 		<title>Form Builder</title>
-    	<link rel="stylesheet" type="text/css" href="css/Sign_in.css">
+        <link href="http://bootsnipp.com/j87klPolka/assets3/css/custom.css" rel="stylesheet">
+
+        <!--<link rel="stylesheet" type="text/css" href="css/Sign_in.css">-->
 
     	<!-- Custom CSS -->
-        <link href="css/form.css" rel="stylesheet">
-        <link href="css/landing-page.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" id="theme" href="css/theme-default.css"/>
+
+        <!--<link href="css/form.css" rel="stylesheet">-->
+        <!--<link href="css/landing-page.css" rel="stylesheet">-->
                 <title>Form Builder</title>
-        <link rel="stylesheet" type="text/css" href="../public/Sign_in.css">
+        <!--<link rel="stylesheet" type="text/css" href="../public/Sign_in.css">-->
         <!-- Bootstrap Core CSS -->
         <link href="../public/css/bootstrap.min.css" rel="stylesheet">
 
@@ -39,10 +43,183 @@
     </head>
 
 	<body>
+    <!-- START PAGE CONTAINER -->
+    <div class="page-container">
 
-      <iframe src="http://bootsnipp.com/j87klPolka/formbuilder3.html" style="width:100%; height:1000px;" frameborder="0"></iframe>
 
+        <!-- START PAGE SIDEBAR -->
+        <div class="page-sidebar">
+            <!-- START X-NAVIGATION -->
+            <ul class="x-navigation">
+                <li class="xn-logo">
+                    <a href="index.html">[Company Name]</a>
+                    <a href="#" class="x-navigation-control"></a>
+                </li>
+                <li class="xn-profile">
+                    <a href="#" class="profile-mini">
+                        <img src="assets/images/users/avatar.jpg" alt="John Doe"/>
+                    </a>
+                    <div class="profile">
+                        <div class="profile-image">
+                            <img src="assets/images/users/avatar.jpg" alt="John Doe"/>
+                        </div>
+                        <div class="profile-data">
+                            <div class="profile-data-name">{{user.companyname}}</div>
+                            <div class="profile-data-title">Owner</div>
+                        </div>
+                    </div>
+                </li>
+                <li class="xn-title">Navigation</li>
+                <li class="active">
+                    <a href="/"><span class="fa fa-dashboard"></span> <span class="xn-text">Overview</span></a>
+                </li>
+                <li class="active">
+                    <a href="patient_queue"><span class="fa fa-clock-o"></span> <span class="xn-text">Patient Queue</span></a>
+                </li>
+                <li class="active">
+                    <a href="add_employees"><span class="fa fa-users"></span> <span class="xn-text">Employees</span></a>
+                </li>
+                <li class="active">
+                    <a href="form"><span class="fa fa-pencil"></span> <span class="xn-text">Edit Form</span></a>
+                </li>
+                <li class="active">
+                    <a href="#"><span class="fa fa-comments-o"></span> <span class="xn-text">[Slack]</span></a>
+                </li>
+                <li class="active">
+                    <a href="settings"><span class="fa fa-cogs"></span> <span class="xn-text">Settings</span></a>
+                </li>
+            </ul>
+            <!-- END X-NAVIGATION -->
+        </div>
+        <!-- END PAGE SIDEBAR -->
 
+        <div class="page-content">
+            <!-- START X-NAVIGATION VERTICAL -->
+            <ul class="x-navigation x-navigation-horizontal x-navigation-panel">
+                <!-- TOGGLE NAVIGATION -->
+                <li class="xn-icon-button">
+                    <a href="#" class="x-navigation-minimize"><span class="fa fa-dedent"></span></a>
+                </li>
+                <!-- END TOGGLE NAVIGATION -->
+                <!-- SEARCH -->
+                <li class="xn-search">
+                    <form role="form">
+                        <input type="text" name="search" placeholder="Search..."/>
+                    </form>
+                </li>
+                <!-- END SEARCH -->
+                <!-- SIGN OUT -->
+                <li class="xn-icon-button pull-right">
+                    <a href="/logout" class="mb-control" data-box="#mb-signout"><span class="fa fa-sign-out"></span></a>
+                </li>
+                <!-- END SIGN OUT -->
+                <!-- MESSAGES -->
+                <li class="xn-icon-button pull-right">
+                    <a href="#"><span class="fa fa-comments"></span></a>
+                    <div class="informer informer-danger">4</div>
+                    <div class="panel panel-primary animated zoomIn xn-drop-left xn-panel-dragging">
+                        <div class="panel-heading">
+                            <h3 class="panel-title"><span class="fa fa-comments"></span> Messages</h3>
+                            <div class="pull-right">
+                                <span class="label label-danger">4 new</span>
+                            </div>
+                        </div>
+                        <div class="panel-body list-group list-group-contacts scroll" style="height: 200px;">
+                            <a href="#" class="list-group-item">
+                                <div class="list-group-status status-online"></div>
+                                <img src="assets/images/users/user2.jpg" class="pull-left" alt="John Doe"/>
+                                <span class="contacts-title">John Doe</span>
+                                <p>Praesent placerat tellus id augue condimentum</p>
+                            </a>
+                            <a href="#" class="list-group-item">
+                                <div class="list-group-status status-away"></div>
+                                <img src="assets/images/users/user.jpg" class="pull-left" alt="Dmitry Ivaniuk"/>
+                                <span class="contacts-title">Dmitry Ivaniuk</span>
+                                <p>Donec risus sapien, sagittis et magna quis</p>
+                            </a>
+                            <a href="#" class="list-group-item">
+                                <div class="list-group-status status-away"></div>
+                                <img src="assets/images/users/user3.jpg" class="pull-left" alt="Nadia Ali"/>
+                                <span class="contacts-title">Nadia Ali</span>
+                                <p>Mauris vel eros ut nunc rhoncus cursus sed</p>
+                            </a>
+                            <a href="#" class="list-group-item">
+                                <div class="list-group-status status-offline"></div>
+                                <img src="assets/images/users/user6.jpg" class="pull-left" alt="Darth Vader"/>
+                                <span class="contacts-title">Darth Vader</span>
+                                <p>I want my money back!</p>
+                            </a>
+                        </div>
+                        <div class="panel-footer text-center">
+                            <a href="pages-messages.html">Show all messages</a>
+                        </div>
+                    </div>
+                </li>
+                <!-- END MESSAGES -->
+            </ul>
+            <!-- END X-NAVIGATION VERTICAL -->
+
+            <!-- START BREADCRUMB -->
+            <ul class="breadcrumb">
+                <li><a href="/">Home</a></li>
+                <li class="active">Employees</li>
+            </ul>
+            <!-- END BREADCRUMB -->
+
+            <!-- PAGE CONTENT WRAPPER -->
+            <div class="page-content-wrap">
+                <!--<iframe id="formbuilder_iframe" src="http://bootsnipp.com/j87klPolka/formbuilder3.html" style="width:100%; height:1000px;" frameborder="0"></iframe>-->
+                <div class="container">
+                    <div class="row clearfix">
+
+                        <!-- Components -->
+                        <div class="col-md-7">
+                            <h2>Drag & Drop components</h2>
+                            <hr><hr>
+                            <div class="tabbable">
+                                <ul class="nav nav-tabs" id="formtabs">
+                                    <!-- Tab nav -->
+                                </ul>
+                                <hr>
+                                <form class="form-horizontal" id="components">
+                                    <fieldset>
+                                        <div class="tab-content">
+                                            <!-- Tabs of snippets go here -->
+                                        </div>
+                                    </fieldset>
+                                </form>
+                            </div>
+                        </div>
+                        <!-- / Components -->
+                        <!-- Building Form. -->
+                        <div class="col-md-5">
+                            <div class="clearfix">
+                                <h2>Your Form</h2>
+                                <hr>
+                                <div id="build">
+                                    <form id="target" class="form-horizontal">
+                                    </form>
+                                </div>
+                            </div>
+                            <form method="POST">
+                                <input type="hidden" id="hiddenformhtml" name="form">
+                                <button id="saveform" onclick="test()">Save</button>
+                            </form>
+                        </div>
+                        <!-- / Building Form. -->
+                    </div>
+                    </div>
+                <script data-main="http://bootsnipp.com/j87klPolka/assets3/js/main-built.js" src="http://bootsnipp.com/j87klPolka/assets3/js/lib/require.js" ></script>
+
+                </div>
+        </div>
+    </div>
+
+    <script>
+        test = function(){
+            document.getElementById("hiddenformhtml").value = document.getElementById("render").value;
+        };
+    </script>
 	</body>
 </html>
 
