--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -8,133 +8,274 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="csrf-token" content="kbVvSFA0FeOU53dEI1g6hA+S13No4sPlWW+I8=">
     <title>Settings</title>
+    <link rel="stylesheet" type="text/css" id="theme" href="css/theme-default.css"/>
+
     <link rel="stylesheet" href="css/bootstrap.css">
-    <style>
-        body {
-            padding-top: 25px;
-        }
-    </style>
 </head>
 
 <body>
-    <div class="container">
-        <div class="page-header">
-            <h3>Profile Information</h3></div>
-        <form action="" method="POST" class="form-horizontal">
-            <input type="hidden" name="_csrf" value="kbVvSFA0FeOU53dEI1g6hA+S13No4sPlWW+I8=">
-            <div class="form-group">
-                <label for="email" class="col-sm-2 control-label">Email</label>
-                <div class="col-sm-4">
-                    <input type="email" name="email" id="email" value="" class="form-control">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="name" class="col-sm-2 control-label">Company Name</label>
-                <div class="col-sm-4">
-                    <input type="text" name="name" id="name" value="" class="form-control">
-                </div>
-            </div>
-            <!--
-            <div class="form-group">
-                <label for="gender" class="col-sm-2 control-label">Gender</label>
-                <div class="col-sm-4">
-                    <label class="radio col-sm-4">
-                        <input type="radio" name="gender" value="male" data-toggle="radio"><span>Male</span></label>
-                    <label class="radio col-sm-4">
-                        <input type="radio" name="gender" value="female" data-toggle="radio"><span>Female</span></label>
-                </div>
-            </div>-->
-            <div class="form-group">
-                <label for="location" class="col-sm-2 control-label">Location</label>
-                <div class="col-sm-4">
-                    <input type="text" name="location" id="location" value="" class="form-control">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="logo" class="col-sm-2 control-label">User Photo </label>
-                <div class="col-sm-4"><img src="" width="100" height="100" class="profile"></div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-4">
-                    <button type="submit" class="btn btn btn-primary"><i class="fa fa-pencil"></i>Update Profile</button>
-                </div>
-            </div>
-        </form>
-        <div class="page-header">
-            <h3>Change Password</h3></div>
-        <form action="" method="POST" class="form-horizontal">
-           
-            <input type="hidden" name="_csrf" value="kbVvSFA0FeOU53dEI1g6hA+S13No4sPlWW+I8=">
-            <div class="form-group">
-                <label for="password" class="col-sm-3 control-label">Current Password</label>
-                <div class="col-sm-4">
-                    <input type="password" name="password" id="currentPassword" class="form-control">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="password" class="col-sm-3 control-label">New Password</label>
-                <div class="col-sm-4">
-                    <input type="password" name="password" id="newPassword" class="form-control">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="confirmPassword" class="col-sm-3 control-label">Confirm Password</label>
-                <div class="col-sm-4">
-                    <input type="password" name="confirmPassword" id="confirmPassword" class="form-control" onkeyup="checkPass();">
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-3 col-sm-5">
-                    <button type="reset" class="btn btn btn-secondary">Clear Changes</button>
-                    <button type="submit" class="btn btn btn-primary" id="btnChange"><i class="fa fa-lock"></i>Change Password</button>
-                    <span id="confirmMessage" class="confirmMessage"></span>
-                </div>
-            </div>
-        </form>
-        <div class="page-header">
-            <h3>Delete Account</h3></div>
-        <p>You can delete your account, but keep in mind this action is irreversible.</p>
-        <form action="" method="POST">
-            <input type="hidden" name="_csrf" value="kbVvSFA0FeOU53dEI1g6hA+S13No4sPlWW+I8=">
-            <button type="submit" class="btn btn-danger"><i class="fa fa-trash"></i>Delete my account</button>
-        </form>
-        <div class="page-header">
-            <h3>Linked Accounts</h3>
-        </div>
 
+<!-- START PAGE CONTAINER -->
+<div class="page-container">
+
+
+    <!-- START PAGE SIDEBAR -->
+    <div class="page-sidebar">
+        <!-- START X-NAVIGATION -->
+        <ul class="x-navigation">
+            <li class="xn-logo">
+                <a href="index.html">[Company Name]</a>
+                <a href="#" class="x-navigation-control"></a>
+            </li>
+            <li class="xn-profile">
+                <a href="#" class="profile-mini">
+                    <img src="assets/images/users/avatar.jpg" alt="John Doe"/>
+                </a>
+                <div class="profile">
+                    <div class="profile-image">
+                        <img src="assets/images/users/avatar.jpg" alt="John Doe"/>
+                    </div>
+                    <div class="profile-data">
+                        {{#if user.companyname}}
+                            <div class="profile-data-name">{{user.companyname}}</div>
+                            <div class="profile-data-title">Owner</div>
+                        {{else}}
+                            <div class="profile-data-name">{{user.name}}</div>
+                            <div class="profile-data-title">Employee</div>
+                        {{/if}}
+                    </div>
+                </div>
+            </li>
+            <li class="xn-title">Navigation</li>
+            <li class="active">
+                <a href="/"><span class="fa fa-dashboard"></span> <span class="xn-text">Overview</span></a>
+            </li>
+            <li class="active">
+                <a href="patient_queue"><span class="fa fa-clock-o"></span> <span
+                        class="xn-text">Patient Queue</span></a>
+            </li>
+            {{#if user.companyname}}
+                <li class="active">
+                    <a href="add_employees"><span class="fa fa-users"></span> <span class="xn-text">Employees</span></a>
+                </li>
+                <li class="active">
+                    <a href="form"><span class="fa fa-pencil"></span> <span class="xn-text">Edit Form</span></a>
+                </li>
+            {{/if}}
+            <li class="active">
+                <a href="#"><span class="fa fa-comments-o"></span> <span class="xn-text">[Slack]</span></a>
+            </li>
+            <li class="active">
+                <a href="settings"><span class="fa fa-cogs"></span> <span class="xn-text">Settings</span></a>
+            </li>
+        </ul>
+        <!-- END X-NAVIGATION -->
     </div>
+    <!-- END PAGE SIDEBAR -->
 
-    <footer>
+    <div class="page-content">
+        <!-- START X-NAVIGATION VERTICAL -->
+        <ul class="x-navigation x-navigation-horizontal x-navigation-panel">
+            <!-- TOGGLE NAVIGATION -->
+            <li class="xn-icon-button">
+                <a href="#" class="x-navigation-minimize"><span class="fa fa-dedent"></span></a>
+            </li>
+            <!-- END TOGGLE NAVIGATION -->
+            <!-- SEARCH -->
+            <li class="xn-search">
+                <form role="form">
+                    <input type="text" name="search" placeholder="Search..."/>
+                </form>
+            </li>
+            <!-- END SEARCH -->
+            <!-- SIGN OUT -->
+            <li class="xn-icon-button pull-right">
+                <a href="/logout" class="mb-control" data-box="#mb-signout"><span class="fa fa-sign-out"></span></a>
+            </li>
+            <!-- END SIGN OUT -->
+            <!-- MESSAGES -->
+            <li class="xn-icon-button pull-right">
+                <a href="#"><span class="fa fa-comments"></span></a>
+                <div class="informer informer-danger">4</div>
+                <div class="panel panel-primary animated zoomIn xn-drop-left xn-panel-dragging">
+                    <div class="panel-heading">
+                        <h3 class="panel-title"><span class="fa fa-comments"></span> Messages</h3>
+                        <div class="pull-right">
+                            <span class="label label-danger">4 new</span>
+                        </div>
+                    </div>
+                    <div class="panel-body list-group list-group-contacts scroll" style="height: 200px;">
+                        <a href="#" class="list-group-item">
+                            <div class="list-group-status status-online"></div>
+                            <img src="assets/images/users/user2.jpg" class="pull-left" alt="John Doe"/>
+                            <span class="contacts-title">John Doe</span>
+                            <p>Praesent placerat tellus id augue condimentum</p>
+                        </a>
+                        <a href="#" class="list-group-item">
+                            <div class="list-group-status status-away"></div>
+                            <img src="assets/images/users/user.jpg" class="pull-left" alt="Dmitry Ivaniuk"/>
+                            <span class="contacts-title">Dmitry Ivaniuk</span>
+                            <p>Donec risus sapien, sagittis et magna quis</p>
+                        </a>
+                        <a href="#" class="list-group-item">
+                            <div class="list-group-status status-away"></div>
+                            <img src="assets/images/users/user3.jpg" class="pull-left" alt="Nadia Ali"/>
+                            <span class="contacts-title">Nadia Ali</span>
+                            <p>Mauris vel eros ut nunc rhoncus cursus sed</p>
+                        </a>
+                        <a href="#" class="list-group-item">
+                            <div class="list-group-status status-offline"></div>
+                            <img src="assets/images/users/user6.jpg" class="pull-left" alt="Darth Vader"/>
+                            <span class="contacts-title">Darth Vader</span>
+                            <p>I want my money back!</p>
+                        </a>
+                    </div>
+                    <div class="panel-footer text-center">
+                        <a href="pages-messages.html">Show all messages</a>
+                    </div>
+                </div>
+            </li>
+            <!-- END MESSAGES -->
+        </ul>
+        <!-- END X-NAVIGATION VERTICAL -->
 
-    </footer>
-    <!--<script src="js/jquery-2.1.3.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    -->
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+        <!-- START BREADCRUMB -->
+        <ul class="breadcrumb">
+            <li><a href="/">Home</a></li>
+            <li class="active">Employees</li>
+        </ul>
+        <!-- END BREADCRUMB -->
 
-    <script>
-        //TODO: Validate Current password to allow password change
-        
-        // Check for New Password Match
-        function checkPass() {
-            var password = document.getElementById("#newPassword");
-            var confirmPassword = document.getElementById("#confirmPassword");
-            var msg = document.getElementById('confirmMessage');
-            //Set the colors we will be using ...
-            var goodColor = "#66cc66";
-            var badColor = "#ff6666";
-            if (password != confirmPassword) {
-                confirmPassword.style.backgroundColor = badColor;
-                msg.style.color = badColor;
-                msg.innerHTML = "Passwords Do Not Match!"
-                return false;
-            } else {
-                confirmPassword.style.backgroundColor = goodColor;
-                msg.style.color = goodColor;
-                msg.innerHTML = "Passwords Match!"
-            }
-        };
-    </script>
+        <!-- PAGE CONTENT WRAPPER -->
+        <div class="page-content-wrap">
+            <div class="container">
+                <div class="page-header">
+                    <h3>Profile Information</h3></div>
+                <form action="" method="POST" class="form-horizontal">
+                    <input type="hidden" name="_csrf" value="kbVvSFA0FeOU53dEI1g6hA+S13No4sPlWW+I8=">
+                    <div class="form-group">
+                        <label for="email" class="col-sm-2 control-label">Email</label>
+                        <div class="col-sm-4">
+                            <input type="email" name="email" id="email" value="" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="name" class="col-sm-2 control-label">Company Name</label>
+                        <div class="col-sm-4">
+                            <input type="text" name="name" id="name" value="" class="form-control">
+                        </div>
+                    </div>
+                    <!--
+                    <div class="form-group">
+                        <label for="gender" class="col-sm-2 control-label">Gender</label>
+                        <div class="col-sm-4">
+                            <label class="radio col-sm-4">
+                                <input type="radio" name="gender" value="male" data-toggle="radio"><span>Male</span></label>
+                            <label class="radio col-sm-4">
+                                <input type="radio" name="gender" value="female" data-toggle="radio"><span>Female</span></label>
+                        </div>
+                    </div>-->
+                    <div class="form-group">
+                        <label for="location" class="col-sm-2 control-label">Location</label>
+                        <div class="col-sm-4">
+                            <input type="text" name="location" id="location" value="" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="logo" class="col-sm-2 control-label">User Photo </label>
+                        <div class="col-sm-4"><img src="" width="100" height="100" class="profile"></div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-4">
+                            <button type="submit" class="btn btn btn-primary"><i class="fa fa-pencil"></i>Update Profile
+                            </button>
+                        </div>
+                    </div>
+                </form>
+                <div class="page-header">
+                    <h3>Change Password</h3></div>
+                <form action="" method="POST" class="form-horizontal">
+
+                    <input type="hidden" name="_csrf" value="kbVvSFA0FeOU53dEI1g6hA+S13No4sPlWW+I8=">
+                    <div class="form-group">
+                        <label for="password" class="col-sm-3 control-label">Current Password</label>
+                        <div class="col-sm-4">
+                            <input type="password" name="password" id="currentPassword" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="password" class="col-sm-3 control-label">New Password</label>
+                        <div class="col-sm-4">
+                            <input type="password" name="password" id="newPassword" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="confirmPassword" class="col-sm-3 control-label">Confirm Password</label>
+                        <div class="col-sm-4">
+                            <input type="password" name="confirmPassword" id="confirmPassword" class="form-control"
+                                   onkeyup="checkPass();">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-3 col-sm-5">
+                            <button type="reset" class="btn btn btn-secondary">Clear Changes</button>
+                            <button type="submit" class="btn btn btn-primary" id="btnChange"><i class="fa fa-lock"></i>Change
+                                Password
+                            </button>
+                            <span id="confirmMessage" class="confirmMessage"></span>
+                        </div>
+                    </div>
+                </form>
+                <div class="page-header">
+                    <h3>Delete Account</h3></div>
+                <p>You can delete your account, but keep in mind this action is irreversible.</p>
+                <form action="" method="POST">
+                    <input type="hidden" name="_csrf" value="kbVvSFA0FeOU53dEI1g6hA+S13No4sPlWW+I8=">
+                    <button type="submit" class="btn btn-danger"><i class="fa fa-trash"></i>Delete my account</button>
+                </form>
+                <div class="page-header">
+                    <h3>Linked Accounts</h3>
+                </div>
+
+            </div>
+
+            <footer>
+
+            </footer>
+            <!--<script src="js/jquery-2.1.3.min.js"></script>
+            <script src="js/bootstrap.min.js"></script>
+            -->
+            <script type="text/javascript"
+                    src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+
+            <script>
+                //TODO: Validate Current password to allow password change
+
+                // Check for New Password Match
+                function checkPass() {
+                    var password = document.getElementById("#newPassword");
+                    var confirmPassword = document.getElementById("#confirmPassword");
+                    var msg = document.getElementById('confirmMessage');
+                    //Set the colors we will be using ...
+                    var goodColor = "#66cc66";
+                    var badColor = "#ff6666";
+                    if (password != confirmPassword) {
+                        confirmPassword.style.backgroundColor = badColor;
+                        msg.style.color = badColor;
+                        msg.innerHTML = "Passwords Do Not Match!"
+                        return false;
+                    } else {
+                        confirmPassword.style.backgroundColor = goodColor;
+                        msg.style.color = goodColor;
+                        msg.innerHTML = "Passwords Match!"
+                    }
+                }
+                ;
+            </script>
+        </div>
+    </div>
+</div>
+
 
 </body>
 
